@startuml

title __CONTROLLER's Class Diagram__\n

  namespace com.bomvizinho.microservice {
    namespace boundary.controller {
      class com.bomvizinho.microservice.boundary.controller.ServicoController {
          + ServicoController()
          + atualizarServico()
          + buscarTodosServicos()
          + criarServico()
          + deletarServico()
      }
    }
  }
  

  namespace com.bomvizinho.microservice {
    namespace boundary.controller {
      class com.bomvizinho.microservice.boundary.controller.UsuarioController {
          + UsuarioController()
          + alterarIdoso()
          + alterarSenha()
          + alterarVoluntario()
          + buscarTodosUsuarios()
          + cadastrarUsuario()
          + login()
          + redefinirSenha()
      }
    }
  }
  

  com.bomvizinho.microservice.boundary.controller.ServicoController o-- com.bomvizinho.microservice.application.usecase.AlterarServicoUseCase : alterarServicoUseCase
  com.bomvizinho.microservice.boundary.controller.ServicoController o-- com.bomvizinho.microservice.application.usecase.BuscarTodosServicosElegiveisUseCase : buscarTodosServicosElegiveisUseCase
  com.bomvizinho.microservice.boundary.controller.ServicoController o-- com.bomvizinho.microservice.application.usecase.CriarServicoUseCase : criarServicoUseCase
  com.bomvizinho.microservice.boundary.controller.ServicoController o-- com.bomvizinho.microservice.application.usecase.DeletarServicoUseCase : deletarServicoUseCase
  com.bomvizinho.microservice.boundary.controller.UsuarioController o-- com.bomvizinho.microservice.application.usecase.AlterarIdosoUseCase : alterarIdosoUseCase
  com.bomvizinho.microservice.boundary.controller.UsuarioController o-- com.bomvizinho.microservice.application.usecase.AlterarSenhaUseCase : alterarSenhaUseCase
  com.bomvizinho.microservice.boundary.controller.UsuarioController o-- com.bomvizinho.microservice.application.usecase.AlterarVoluntarioUseCase : alterarVoluntarioUseCase
  com.bomvizinho.microservice.boundary.controller.UsuarioController o-- com.bomvizinho.microservice.application.usecase.BuscarTodosUsuariosUseCase : buscarTodosUsuariosUseCase
  com.bomvizinho.microservice.boundary.controller.UsuarioController o-- com.bomvizinho.microservice.application.usecase.CadastrarUsuarioUseCase : cadastrarUsuarioUseCase
  com.bomvizinho.microservice.boundary.controller.UsuarioController o-- com.bomvizinho.microservice.application.service.EmailService : emailService
  com.bomvizinho.microservice.boundary.controller.UsuarioController o-- com.bomvizinho.microservice.application.usecase.LoginUseCase : loginUseCase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
